@@ -1,3 +1,6 @@
+2011-12-02  6.7.3-11 Anthony  <A.Thyssen@griffith...>
+  * Fixed incorrect 'delta' increment calculation in Equal tile crop
+
 2011-12-01  6.7.3-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-10, SVN revision 6106.
 
